# tension

./: Cargo.toml  spec.yaml
client/: Cargo.toml  Dockerfile
client/src/: lib.rs  resources.rs  sim.rs  states.rs  web.rs
client/src/states/: lobby.rs  main.rs  no_room.rs
docs/: index.html
server/: Cargo.toml  Dockerfile
server/src/: main.rs  state.rs
shared/: Cargo.toml
shared/src/: lib.rs  viewer.rs
websocket/: Cargo.toml
websocket/src/: lib.rs  native.rs  websys.rs
