[package]
name = "server"
version = "0.1.0"
authors = ["Tanner Rogalsky <tanner@tannerrogalsky.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = { path = "../shared" }
tokio = { version = "1", features = ["full"] }
futures = "0.3.15"
warp = "0.3"
rand = "0.8.3"
serde_json = "1.0.64"
log = "0.4.14"
crossbeam-channel = "0.5.1"

simple_logger = "1.11"
eyre = "0.6.5"