[package]
name = "websocket"
version = "0.1.0"
authors = ["Tanner Rogalsky <tanner@tannerrogalsky.com>"]
edition = "2018"

[features]
ssl = ["ws/ssl"]

[dependencies]
log = "0.4"
futures = "0.3"
thiserror = "1.0.25"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ws = "0.9"
url = "2.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3"
features = [
  "ErrorEvent",
  "MessageEvent",
  "CloseEvent",
  "WebSocket",
]